// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render SortSelect SortSelect with sort type 1 in active state renders correctly 1`] = `
<form
  action="#"
  className="places__sorting"
  method="get"
>
  <span
    className="places__sorting-caption"
  >
    Sort by
  </span>
  <span
    className="places__sorting-type"
    onClick={[Function]}
    tabIndex="0"
  >
    Price: high to low
    <svg
      className="places__sorting-arrow"
      height="4"
      width="7"
    >
      <use
        xlinkHref="#icon-arrow-select"
      />
    </svg>
  </span>
  <ul
    className="places__options places__options--custom places__options--opened"
    onClick={[Function]}
  >
    <li
      className="places__option "
      data-sort-type="DEFAULT"
      tabIndex="0"
    >
      Popular
    </li>
    <li
      className="places__option "
      data-sort-type="PRICE_ASC"
      tabIndex="0"
    >
      Price: low to high
    </li>
    <li
      className="places__option places__option--active"
      data-sort-type="PRICE_DESC"
      tabIndex="0"
    >
      Price: high to low
    </li>
    <li
      className="places__option "
      data-sort-type="RATING_DESC"
      tabIndex="0"
    >
      Top rated first
    </li>
  </ul>
</form>
`;

exports[`Render SortSelect SortSelect with sort type 2 in inactive state renders correctly 1`] = `
<form
  action="#"
  className="places__sorting"
  method="get"
>
  <span
    className="places__sorting-caption"
  >
    Sort by
  </span>
  <span
    className="places__sorting-type"
    onClick={[Function]}
    tabIndex="0"
  >
    Popular
    <svg
      className="places__sorting-arrow"
      height="4"
      width="7"
    >
      <use
        xlinkHref="#icon-arrow-select"
      />
    </svg>
  </span>
  <ul
    className="places__options places__options--custom "
    onClick={[Function]}
  >
    <li
      className="places__option places__option--active"
      data-sort-type="DEFAULT"
      tabIndex="0"
    >
      Popular
    </li>
    <li
      className="places__option "
      data-sort-type="PRICE_ASC"
      tabIndex="0"
    >
      Price: low to high
    </li>
    <li
      className="places__option "
      data-sort-type="PRICE_DESC"
      tabIndex="0"
    >
      Price: high to low
    </li>
    <li
      className="places__option "
      data-sort-type="RATING_DESC"
      tabIndex="0"
    >
      Top rated first
    </li>
  </ul>
</form>
`;
